<resources>
    <string name="app_name">PrakTik-Podcastplayer</string>
    <string name="listen_to_y">

Listen to your shows anytime, anywhere
</string>
    <string name="access_your">

No internet? Listen to downloaded podcasts when you are offline
</string>
    <string name="skip">

Skip
</string>
    <string name="discover_fr">

Discover from the greatest library of Podcasts
</string>
    <string name="discover_am">

500K+ shows from creators all around the world
</string>
    <string name="keep_track_">

A modern, intuitive \ninterface
</string>
    <string name="access_yours">

And an optional dark theme that is easy on the eyes
</string>
    <string name="welcome_abo">

Welcome aboard!
</string>
    <string name="signup_to_g">

Signup or Login to get started
</string>
    <string name="select_topi">

Select Categories
</string>
    <string name="select_topi1">

Pick at least three to get enough \nrecommendations to discover from
</string>
    <string name="select">Select</string>
    <string name="done">done</string>
    <string name="explore">Discover</string>
    <string name="based_on_yo">

Based on your interests
</string>
    <string name="discover">Top 40</string>
    <string name="show_all">Show all</string>
    <string name="alchemy_thi">

The Road that\nlead to nowh...
</string>
    <string name="iheartradio">

iHeartRadio
</string>
    <string name="downloads">

Top 40
</string>
    <string name="explore1">

Edit Categories
</string>
    <string name="search">Search</string>
    <string name="search_hint">
Type &amp; press enter
</string>
    <string name="no_results_">

No results found
</string>
    <string name="try_modifyi">

Try modifying your query or\n search for something else
</string>
    <string name="explore2">
Preferences
</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="down_page">Downloads</string>
    <string name="preferences">Preferences</string>
    <string name="general">General</string>
    <string name="profile">Profile</string>
    <string name="know_goal">Know more about our team and goal</string>
    <string name="broken">Something broken? Help us fix it</string>
    <string name="say_hi">Say hi or complain</string>
    <string name="play_title">Find your Focus, motivations \nsecrets and time management</string>
</resources>
