<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/search"
            android:textColor="@color/font_title"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@+id/searchview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_hint"
        android:searchHintIcon="@drawable/ic_ssearch"
        android:iconifiedByDefault="false"
        android:closeIcon="@drawable/ic_close"
        android:background="@drawable/searchbackground"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="0dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/s_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchview"/>

        <LinearLayout
            android:id="@+id/emptylayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchview">
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_title"
            android:textSize="15sp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/no_results_" />
        <TextView
            android:id="@+id/textView15"
            android:layout_marginTop="7dp"
            android:textColor="@color/font_title"
            android:alpha="0.7"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_modifyi" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>