<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D2733">

    <ScrollView
        android:id="@+id/scrollviewlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button">



        <android.support.constraint.ConstraintLayout
            android:id="@+id/conlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="202dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="62dp"
                android:layout_marginEnd="169dp"
                android:layout_marginRight="169dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/select_topi"
                android:textAppearance="@style/access_your"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/conlayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/conlayout"
                app:layout_constraintTop_toTopOf="@+id/conlayout" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="88dp"
                android:layout_marginRight="88dp"
                android:fontFamily="@font/manrope_light"
                android:text="@string/select_topi1"
                android:textAppearance="@style/select_topi1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                app:layout_constraintEnd_toEndOf="@+id/conlayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/conlayout"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/conlayout"
                app:layout_constraintStart_toStartOf="@+id/conlayout"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/done"
        android:background="@drawable/button_background_default"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/manrope_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollviewlayout"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>