<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomnavigation"
        android:id="@+id/scrolllayout1">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/conlayout12">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="494.64dp"
        android:layout_height="299.41dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/conlayout12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/conlayout12"
        app:layout_constraintTop_toTopOf="@+id/conlayout12"
        app:srcCompat="@drawable/ic_discover" />

    <!--<ImageView-->
        <!--android:id="@+id/imageView3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="24dp"-->
        <!--android:layout_marginTop="34dp"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/conlayout12"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="@+id/conlayout12"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/textView5"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView4"-->
        <!--app:srcCompat="@drawable/banner" />-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/conlayout12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/conlayout12"
        app:layout_constraintBottom_toTopOf="@+id/textView5">

    </android.support.v7.widget.RecyclerView>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/explore"
        android:textAppearance="@style/explore"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        android:fontFamily="@font/manrope_semibold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/conlayout12"
        app:layout_constraintTop_toTopOf="@+id/conlayout12" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/based_on_yo"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:fontFamily="@font/manrope_regular"
        app:layout_constraintEnd_toEndOf="@+id/conlayout12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/conlayout12"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="11dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/conlayout12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/conlayout12">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_pencil" />
    </LinearLayout>


    <!--<ImageView-->
        <!--android:id="@+id/imageView7"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="388dp"-->
        <!--android:layout_marginTop="34dp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/textView6"-->
        <!--app:layout_constraintStart_toStartOf="@+id/conlayout12"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView4"-->
        <!--app:layout_constraintVertical_bias="0.0"-->
        <!--app:srcCompat="@drawable/side" />-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/discover"
        android:textColor="@color/font_title"
        android:textSize="19sp"
        android:fontFamily="@font/manrope_semibold"
        app:layout_constraintStart_toStartOf="@+id/conlayout12"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:text="@string/show_all"
        android:textColor="@color/font_title"
        android:textSize="13sp"
        android:textAlignment="center"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/manrope_regular"
        app:layout_constraintEnd_toEndOf="@+id/conlayout12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/top_rc"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/top_rc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/subcategories"
        app:layout_constraintEnd_toEndOf="@+id/conlayout12"
        app:layout_constraintStart_toStartOf="@+id/conlayout12"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/subcategories"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/conlayout12"
        app:layout_constraintEnd_toEndOf="@id/conlayout12"
        app:layout_constraintTop_toBottomOf="@+id/top_rc">


    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottomnavigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_item_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/scrolllayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"

            app:layout_constraintBottom_toBottomOf="@+id/bottomnavigation"
            app:layout_constraintEnd_toEndOf="@+id/bottomnavigation"
            app:layout_constraintStart_toStartOf="@+id/bottomnavigation"
            app:layout_constraintTop_toTopOf="@+id/bottomnavigation">

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>