<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/preferences"
            android:textColor="@color/font_title"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="47dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_b_arrow" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="@string/general"
        android:fontFamily="@font/manrope_medium"
        android:textColor="@color/font_title"
        android:alpha="0.5"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:background="@drawable/profile_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/profile"
            android:textColor="@color/font_title"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:alpha="0.5"
            android:fontFamily="@font/manrope_medium"
            android:text="Modify your profile"
            android:textColor="@color/font_title"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <LinearLayout
            android:id="@+id/modify"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="8dp"
                android:layout_height="13dp"
                app:srcCompat="@drawable/ic_rightarrow" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="198dp"
            android:fontFamily="@font/manrope_medium"
            android:text="Top Charts Location"
            android:textColor="@color/font_title"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="161dp"
            android:alpha="0.5"
            android:fontFamily="@font/manrope_medium"
            android:text="Choose from available charts"
            android:textColor="@color/font_title"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />


        <LinearLayout
            android:id="@+id/choose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/modify">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="8dp"
                android:layout_height="13dp"
                app:srcCompat="@drawable/ic_rightarrow" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="33dp"
            android:fontFamily="@font/manrope_medium"
            android:text="Change Theme"
            android:textColor="@color/font_title"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:alpha="0.5"
            android:fontFamily="@font/manrope_medium"
            android:text="Switch to dark mode"
            android:textColor="@color/font_title"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <LinearLayout
            android:id="@+id/theme"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/choose">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="8dp"
                android:layout_height="13dp"
                app:srcCompat="@drawable/ic_rightarrow" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="328dp"
        android:alpha="0.5"
        android:fontFamily="@font/manrope_medium"
        android:text="Support"
        android:textColor="@color/font_title"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/profile_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="279dp"
                android:fontFamily="@font/manrope_medium"
                android:text="About us"
                android:textColor="@color/font_title"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/textView27"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="114dp"
                android:alpha="0.5"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/know_goal"
                android:textColor="@color/font_title"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="291dp"
                android:fontFamily="@font/manrope_medium"
                android:text="Privacy"
                android:textColor="@color/font_title"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/textView29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="197dp"
                android:alpha="0.5"
                android:fontFamily="@font/manrope_medium"
                android:text="Read our privacy policy"
                android:textColor="@color/font_title"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/manrope_medium"
                android:text="Report a bug"
                android:textColor="@color/font_title"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="2dp"
                android:alpha="0.5"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/broken"
                android:textColor="@color/font_title"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/manrope_medium"
                android:text="Contact us"
                android:textColor="@color/font_title"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="2dp"
                android:alpha="0.5"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/say_hi"
                android:textColor="@color/font_title"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>